# motleycoder

./: LICENSE  README.md  motleycoder_demo.ipynb  pyproject.toml  requirements.txt
motleycoder/: linter.py  prompts.py  repo.py  user_interface.py
motleycoder/codemap/: builtins_by_lang.json  file_group.py  graph.py  map_args.py  parse.py  rank.py  render.py  repomap.py  tag.py
motleycoder/queries/: tree-sitter-r-tags.scm
motleycoder/tools/: __init__.py  add_files_tool.py  file_edit_tool.py  get_full_text_tool.py  get_modifiable_files_tool.py  inspect_entity_tool.py  return_to_user_tool.py
