[tool.poetry]
name = "motleycoder"
version = "0.1.0"
description = "A set of tools for building AI coders"
authors = ["MotleyCrew <github@motleycrew.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
motleycrew = "^0.1.12"
tree-sitter = "0.21.3"
tree-sitter-languages = "^1.10.2"
grep-ast = "^0.3.3"
litellm = "^1.44.5"
GitPython = "^3.1.43"
rich = "^13.7.1"
diskcache = "^5.6.3"
networkx = "^3.3"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
